infra-configs/gateway.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: GatewayClass
metadata:
  name: envoy
spec:
  controllerName: gateway.envoyproxy.io/gatewayclass-controller
  parametersRef:
    group: gateway.envoyproxy.io
    kind: EnvoyProxy
    name: local
    namespace: envoy-gateway-system
---
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: cilium-gateway-local
  namespace: network
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
spec:
  gatewayClassName: envoy
  listeners:
    - name: http
      protocol: HTTP
      port: 80
      allowedRoutes:
        namespaces:
          from: All

    - name: https-convertx
      protocol: HTTPS
      port: 443
      hostname: convertx.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: convertx-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-copyparty
      protocol: HTTPS
      port: 443
      hostname: copyparty.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: copyparty-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-cyberchef
      protocol: HTTPS
      port: 443
      hostname: cyberchef.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: cyberchef-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-wiki
      protocol: HTTPS
      port: 443
      hostname: wiki.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: wiki-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-ha
      protocol: HTTPS
      port: 443
      hostname: ha.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: ha-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-homepage
      protocol: HTTPS
      port: 443
      hostname: homepage.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: homepage-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-immich
      protocol: HTTPS
      port: 443
      hostname: immich.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: immich-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-jellyfin
      protocol: HTTPS
      port: 443
      hostname: jellyfin.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: jellyfin-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-jellyseer
      protocol: HTTPS
      port: 443
      hostname: jellyseer.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: jellyseer-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-navidrome
      protocol: HTTPS
      port: 443
      hostname: navidrome.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: navidrome-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-mealie
      protocol: HTTPS
      port: 443
      hostname: mealie.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: mealie-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-obico
      protocol: HTTPS
      port: 443
      hostname: obico.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: obico-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-overleaf
      protocol: HTTPS
      port: 443
      hostname: overleaf.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: overleaf-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-penpot
      protocol: HTTPS
      port: 443
      hostname: penpot.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: penpot-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-planka
      protocol: HTTPS
      port: 443
      hostname: planka.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: planka-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-quant-ux
      protocol: HTTPS
      port: 443
      hostname: quant-ux.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: quant-ux-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-quant-ux-ws
      protocol: HTTPS
      port: 443
      hostname: quant-ux-ws.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: quant-ux-ws-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-redisinsight
      protocol: HTTPS
      port: 443
      hostname: redisinsight.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: redisinsight-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-siyuan
      protocol: HTTPS
      port: 443
      hostname: siyuan.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: siyuan-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-stirling-pdf
      protocol: HTTPS
      port: 443
      hostname: stirling-pdf.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: stirling-pdf-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-bentopdf
      protocol: HTTPS
      port: 443
      hostname: bentopdf.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: bentopdf-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-bytestash
      protocol: HTTPS
      port: 443
      hostname: bytestash.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: bytestash-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-syncthing
      protocol: HTTPS
      port: 443
      hostname: syncthing.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: syncthing-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-z2m
      protocol: HTTPS
      port: 443
      hostname: z2m.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: z2m-tls-secret
      allowedRoutes:
        namespaces:
          from: All

    - name: https-unifi
      protocol: HTTPS
      port: 443
      hostname: unifi.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: unifi-tls-secret
      allowedRoutes:
        namespaces:
          from: All
    - name: https-voron
      protocol: HTTPS
      port: 443
      hostname: voron.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: voron-tls-secret
      allowedRoutes:
        namespaces:
          from: All
    - name: https-voron-cam
      protocol: HTTPS
      port: 443
      hostname: cam.voron.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: voron-cam-tls-secret
      allowedRoutes:
        namespaces:
          from: All
    - name: https-mainsail
      protocol: HTTPS
      port: 443
      hostname: mainsail.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: mainsail-tls-secret
      allowedRoutes:
        namespaces:
          from: All
    - name: https-mainsail-cam
      protocol: HTTPS
      port: 443
      hostname: cam.mainsail.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: mainsail-cam-tls-secret
      allowedRoutes:
        namespaces:
          from: All
    - name: https-nas
      protocol: HTTPS
      port: 443
      hostname: nas.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: nas-tls-secret
      allowedRoutes:
        namespaces:
          from: All
    - name: https-minio
      protocol: HTTPS
      port: 443
      hostname: minio.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: minio-tls-secret
      allowedRoutes:
        namespaces:
          from: All
    - name: https-minio-api
      protocol: HTTPS
      port: 443
      hostname: api.minio.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: minio-tls-secret
      allowedRoutes:
        namespaces:
          from: All
    - name: https-ollama
      protocol: HTTPS
      port: 443
      hostname: ollama.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: ollama-tls-secret
      allowedRoutes:
        namespaces:
          from: All
    - name: https-dabitches
      protocol: HTTPS
      port: 443
      hostname: dabitches.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: dabitches-tls-secret
      allowedRoutes:
        namespaces:
          from: All
    - name: https-www-dabitches
      protocol: HTTPS
      port: 443
      hostname: www.dabitches.com
      tls:
        mode: Terminate
        certificateRefs:
          - name: dabitches-tls-secret
      allowedRoutes:
        namespaces:
          from: All
    - name: https-grafana
      protocol: HTTPS
      port: 443
      hostname: grafana.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: grafana-tls-secret
      allowedRoutes:
        namespaces:
          from: All
    - name: https-prometheus
      protocol: HTTPS
      port: 443
      hostname: prometheus.stevevaradi.me
      tls:
        mode: Terminate
        certificateRefs:
          - name: prometheus-tls-secret
      allowedRoutes:
        namespaces:
          from: All
    - name: tcp-postgres
      protocol: TCP
      port: 5432
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute
    - name: tcp-mqtts
      protocol: TCP
      port: 8883
      allowedRoutes:
        namespaces:
          from: All
        kinds:
          - kind: TCPRoute
---
# Redirect all HTTP to HTTPS
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: http-redirect
  namespace: network
spec:
  parentRefs:
    - name: cilium-gateway-local
      sectionName: http
  rules:
    - filters:
        - type: RequestRedirect
          requestRedirect:
            scheme: https
            statusCode: 301
